--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -2,25 +2,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    tools:context="ssbanerjee.passwordmanager.MainActivity">
-
-    <ImageButton
-        android:id="@+id/imageFinger"
-        android:src="@drawable/ic_fingerprint"
-        android:layout_centerInParent="true"
-        android:layout_width="100dp"
-        android:layout_height="100dp" />
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="ssbanerjee.passwordmanager.HomeActivity"
+    tools:showIn="@layout/activity_home">
 
     <TextView
-        android:layout_below="@id/imageFinger"
-        android:textColor="#F5F5F5"
+        android:textColor="#95AAB4"
         android:textSize="20sp"
-        android:text="Please place your fingertip on the scanner to verify your identity"
+        android:text="Login Successful"
         android:layout_centerHorizontal="true"
+        android:layout_centerInParent="true"
         android:textAlignment="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
