--- a/app/src/main/res/layout/activity_password_list.xml
+++ b/app/src/main/res/layout/activity_password_list.xml
@@ -6,12 +6,64 @@
     android:layout_height="match_parent"
     tools:context="ssbanerjee.passwordmanager.PasswordListActivity">
 
-    <Button android:layout_height="50dp" android:layout_width="wrap_content" android:layout_marginEnd="8dp" android:layout_marginStart="8dp" app:layout_constraintRight_toRightOf="parent" android:layout_marginRight="8dp" android:layout_marginLeft="8dp" app:layout_constraintLeft_toRightOf="@+id/button" tools:layout_constraintRight_creator="1" app:layout_constraintBottom_toBottomOf="parent" android:visibility="visible" android:textStyle="bold" android:textSize="14sp" android:textAppearance="@style/TextAppearance.AppCompat" android:textAlignment="center" android:text="Add Password" android:fontFamily="sans-serif" android:layout_marginBottom="16dp" android:id="@+id/addPasswordButton"/>
+    <Button
+        android:id="@+id/addPasswordButton"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:fontFamily="sans-serif"
+        android:text="Add Password"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/changePasswordButton"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintRight_creator="1" />
 
-    <ListView android:layout_height="0dp" android:layout_width="0dp" android:layout_marginEnd="30dp" android:layout_marginStart="30dp" app:layout_constraintRight_toRightOf="parent" android:layout_marginRight="30dp" android:layout_marginLeft="30dp" tools:layout_constraintRight_creator="1" android:layout_marginBottom="14dp" android:id="@+id/passwordList" tools:layout_constraintTop_creator="1" tools:layout_constraintLeft_creator="1" tools:layout_constraintBottom_creator="1" app:layout_constraintTop_toTopOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintBottom_toTopOf="@+id/addPasswordButton" android:layout_marginTop="14dp"/>
+    <Button android:layout_height="48dp" android:layout_width="wrap_content" android:layout_marginEnd="8dp" android:layout_marginStart="8dp" android:layout_marginRight="8dp" android:layout_marginLeft="8dp" app:layout_constraintBottom_toBottomOf="parent" android:textStyle="bold" android:textSize="14sp" android:textAlignment="center" android:text="Clear All" android:fontFamily="sans-serif" android:layout_marginBottom="16dp" android:id="@+id/clearAllPasswordsButton" tools:layout_constraintLeft_creator="1" tools:layout_constraintBottom_creator="1" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintHorizontal_bias="0.515" app:layout_constraintRight_toLeftOf="@+id/changePasswordButton"/>
 
-    <Button android:layout_height="48dp" android:layout_width="wrap_content" android:layout_marginEnd="8dp" android:layout_marginStart="8dp" android:layout_marginRight="8dp" android:layout_marginLeft="8dp" app:layout_constraintBottom_toBottomOf="parent" android:textStyle="bold" android:textSize="14sp" android:textAlignment="center" android:text="Clear All" android:fontFamily="sans-serif" android:layout_marginBottom="16dp" android:id="@+id/clearAllPasswordsButton" tools:layout_constraintLeft_creator="1" tools:layout_constraintBottom_creator="1" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintHorizontal_bias="0.515" app:layout_constraintRight_toLeftOf="@+id/button"/>
+    <Button
+        android:id="@+id/changePasswordButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="Change"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1" />
 
-    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintRight_toRightOf="parent" tools:layout_constraintRight_creator="1" app:layout_constraintBottom_toBottomOf="parent" android:textStyle="bold" android:textAlignment="center" android:text="Settings" android:layout_marginBottom="16dp" android:id="@+id/button" tools:layout_constraintLeft_creator="1" tools:layout_constraintBottom_creator="1" app:layout_constraintLeft_toLeftOf="parent"/>
+    <ListView
+        android:id="@+id/passwordList"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="14dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="14dp"
+        app:layout_constraintBottom_toTopOf="@+id/addPasswordButton"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
 </android.support.constraint.ConstraintLayout>
