--- a/app/src/main/res/layout/password_list_item.xml
+++ b/app/src/main/res/layout/password_list_item.xml
@@ -17,6 +17,7 @@
         android:text="password"
         android:textAlignment="center"
         android:textColor="@android:color/black"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:visibility="gone" />
 
 </LinearLayout>
