--- a/app/src/main/res/layout/activity_add_password.xml
+++ b/app/src/main/res/layout/activity_add_password.xml
@@ -8,14 +8,90 @@
 
     <TextView android:layout_height="wrap_content" android:layout_width="0dp" tools:layout_constraintTop_creator="1" tools:layout_constraintRight_creator="1" tools:layout_constraintLeft_creator="1" app:layout_constraintTop_toTopOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintLeft_toLeftOf="parent" android:textStyle="bold" android:textSize="24sp" android:textAlignment="center" android:text="Service Name" android:layout_marginTop="16dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:id="@+id/textView2"/>
 
-    <EditText android:layout_height="wrap_content" android:layout_width="0dp" tools:layout_constraintRight_creator="1" tools:layout_constraintLeft_creator="1" app:layout_constraintRight_toRightOf="parent" app:layout_constraintLeft_toLeftOf="parent" android:textAlignment="center" android:text="amazon.com" android:layout_marginTop="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:id="@+id/nameEdit" app:layout_constraintTop_toBottomOf="@+id/textView2" android:inputType="textPersonName" android:ems="10"/>
+    <EditText
+        android:id="@+id/nameEdit"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:textAlignment="center"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1" />
 
-    <TextView android:layout_height="wrap_content" android:layout_width="0dp" tools:layout_constraintRight_creator="1" tools:layout_constraintLeft_creator="1" app:layout_constraintRight_toRightOf="parent" app:layout_constraintLeft_toLeftOf="parent" android:textStyle="bold" android:textSize="24sp" android:textAlignment="center" android:text="Password" android:layout_marginTop="99dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:id="@+id/textView3" app:layout_constraintTop_toBottomOf="@+id/nameEdit"/>
+    <TextView android:layout_height="wrap_content" android:layout_width="0dp" tools:layout_constraintRight_creator="1" tools:layout_constraintLeft_creator="1" app:layout_constraintRight_toRightOf="parent" app:layout_constraintLeft_toLeftOf="parent" android:textStyle="bold" android:textSize="24sp" android:textAlignment="center" android:text="Password" android:layout_marginTop="60dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:id="@+id/textView3" app:layout_constraintTop_toBottomOf="@+id/nameEdit"/>
 
-    <EditText android:layout_height="wrap_content" android:layout_width="0dp" tools:layout_constraintRight_creator="1" tools:layout_constraintLeft_creator="1" app:layout_constraintRight_toRightOf="@+id/textView3" app:layout_constraintLeft_toLeftOf="@+id/textView3" android:textAlignment="center" android:text="pass1234" android:layout_marginTop="8dp" android:id="@+id/passEdit" app:layout_constraintTop_toBottomOf="@+id/textView3" android:inputType="textPersonName" android:ems="10"/>
+    <EditText
+        android:id="@+id/passEdit"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:textAlignment="center"
+        app:layout_constraintLeft_toLeftOf="@+id/textView3"
+        app:layout_constraintRight_toRightOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1" />
 
     <Button android:layout_height="wrap_content" android:layout_width="wrap_content" tools:layout_constraintLeft_creator="1" app:layout_constraintLeft_toLeftOf="parent" android:textStyle="bold" android:textSize="24sp" android:text="Return" android:layout_marginStart="8dp" android:id="@+id/returnButton" tools:layout_constraintBottom_creator="1" app:layout_constraintBottom_toBottomOf="parent" android:visibility="visible" android:layout_marginBottom="16dp"/>
 
     <Button android:layout_height="wrap_content" android:layout_width="wrap_content" tools:layout_constraintRight_creator="1" app:layout_constraintRight_toRightOf="parent" android:textStyle="bold" android:textSize="24sp" android:text="Save" android:layout_marginEnd="8dp" android:id="@+id/saveButton" tools:layout_constraintBottom_creator="1" app:layout_constraintBottom_toBottomOf="parent" android:visibility="visible" android:layout_marginBottom="16dp"/>
+
+    <Button
+        android:id="@+id/AddPasswordRandomButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Random Password"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/passEdit"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <CheckBox
+        android:id="@+id/AddPasswordSpecialCharactersCheck"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Special Characters"
+        app:layout_constraintTop_toBottomOf="@+id/AddPasswordRandomButton"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginStart="7dp"
+        app:layout_constraintLeft_toLeftOf="@+id/AddPasswordRandomButton" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Length"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        app:layout_constraintTop_toBottomOf="@+id/AddPasswordSpecialCharactersCheck"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <EditText
+        android:id="@+id/AddPasswordLength"
+        android:layout_width="54dp"
+        android:layout_height="42dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1" />
 
 </android.support.constraint.ConstraintLayout>
